kubernetes/main/apps/network/external-services/hera-cockpit/endpointslice.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: hera-cockpit
  labels:
    kubernetes.io/service-name: hera-cockpit
addressType: IPv4
endpoints:
  - addresses:
      - 10.10.0.8
    conditions:
      ready: true
      serving: true
      terminating: false
ports:
  - name: http
    port: 9090
    protocol: TCP
    appProtocol: http
